--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cool Login form | By Code Info</title>
+  <link rel="stylesheet" href="style.css">
+   <!-- Font Awesome Cdn Link -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+</head>
+<body>
+  <div class="wrapper">
+    <img src="https://sv1.picz.in.th/images/2023/04/17/mejP8k.png" alt="My Image"class="login_img">
+    
+    <form>
+        <label>USERNAME/TEL NUMBER</label>
+        <input type="email" placeholder="" />
+        <label>PASSWORD</label>
+        <input type="password" placeholder="" />
+    <closeform></closeform></form>
+    <button>Let's Start</button>
+    
+    <div class="not-member">
+      don't have an account <a href="#">Sing up</a>
+    </div>
+  </div>
+</body>
+</html>
