--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,92 @@
-html {
-  font-size: 14px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body{
+  background-image: url('https://sv1.picz.in.th/images/2023/04/18/me8Wfv.png');
+  border-top: 40px solid white;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.display_wrapper{
+  display: flex;
+  justify-content: center;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
+.wrapper{
 
-html {
-  position: relative;
-  min-height: 100%;
+  width: 500px;
+  height: 480px;
+  padding: 5rem 0 4rem 0;
+  margin:50px auto;
+  margin-top:12%;
+  background: #fff;
+  border-radius: 10%;
+  text-align: center;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+  
 }
-
-body {
-  margin-bottom: 60px;
+.login_img{
+  width: 20%; /* ให้ความกว้างของ <img> ไม่เกิน 100% ของพื้นที่ของ parent element */
+  height: 20%; /* ปรับความสูงของ <img> ให้เท่ากับอัตราส่วนของความกว้างที่กำหนดไว้ */
+  position: absolute;
+  top: 150px;
+  left: calc(50% - 150px);
+ 
+}
+p{
+  margin-bottom: 1.7rem;
+}
+form label {
+  display: flex;
+  margin-top: 40px;
+  font-size: 18px;
+  font-weight: bold;
+  transform: translateX(50px);
+}
+form input{
+  width: 85%;
+  outline: none;
+  border: none;
+  background: #dfe9f5;
+  padding: 12px 14px;
+  margin-bottom: 5px;
+  border-radius: 20px;
+}
+button{
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 2rem;
+  padding: 8px 0;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  width: 85%;
+  background: rgb(209, 30, 24);
+  color: #fff;
+  cursor: pointer;
+  
+}
+button:hover{
+  background: rgba(122, 30, 30, 0.767);
+}
+.not-member{
+  font-size: 0.8rem;
+  margin-top: 2.5rem;
+  transform: translateX(5px);
+}
+.not-member a{
+  color: rgb(203, 34, 8);
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
+.nav_logo{
+  
+  position: absolute;
+  top:-20px;
+  left: calc(50% - 50px);
 }
