--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 body{
-  background-image: url('https://sv1.picz.in.th/images/2023/04/18/me8Wfv.png');
+  background-image: url('https://sv1.picz.in.th/images/2023/04/18/me8HWS.png');
   border-top: 40px solid white;
 }
 
@@ -50,10 +50,11 @@ form input{
   width: 85%;
   outline: none;
   border: none;
-  background: #dfe9f5;
+  background: #fff;
   padding: 12px 14px;
   margin-bottom: 5px;
   border-radius: 20px;
+  border: solid rgb(179, 176, 176);
 }
 button{
   font-size: 1.5rem;
