--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -1,11 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-    <!-- Bootstrap v5.1.3 CDNs -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
+   
   <link rel="stylesheet" href="style.css">
    <!-- Font Awesome Cdn Link -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -13,21 +10,22 @@
 <body>
   
    <div class="image-container">
-       <img src="https://sv1.picz.in.th/images/2023/04/17/mejP8k.png" alt="My Image"class="login_img">
+      <h1>Creacte Account</h1>
     </div>
   <div class="wrapper">
-   
-    
     <form>
-        <label>USERNAME/TEL NUMBER</label>
+        <label>USERNAME</label>
         <input type="email" placeholder="" />
         <label>PASSWORD</label>
         <input type="password" placeholder="" />
+        <label>TEL NUMBER</label>
+        <input type="tel number" placeholder="" />
+
     <closeform></closeform></form>
-    <button>Let's Start</button>
+    <button>Creacte Account</button>
     
     <div class="not-member">
-      don't have an account <a href="./Signup.cshtml">Sign up</a>
+      aready have an account <a href="/Index.cshtml">login</a>
     </div>
   </div>
 </body>
