--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -10,9 +10,9 @@
 <body>
   
    <div class="image-container">
-      <h1>Creacte Account</h1>
+      <h2>Create Account</h2>
     </div>
-  <div class="wrapper">
+  <div class="wrapper-signup">
     <form>
         <label>USERNAME</label>
         <input type="email" placeholder="" />
@@ -22,7 +22,7 @@
         <input type="tel number" placeholder="" />
 
     <closeform></closeform></form>
-    <button>Creacte Account</button>
+    <button>Create Account</button>
     
     <div class="not-member">
       aready have an account <a href="/Index.cshtml">login</a>
