--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -25,7 +25,7 @@
     <button>Create Account</button>
     
     <div class="not-member">
-      aready have an account <a href="/Index.cshtml">login</a>
+      aready have an account @Html.ActionLink("Signup", "Index", "Home", null, new { @class = "" });
     </div>
   </div>
 </body>
